methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:4: error: type mismatch;
 found   : Unit
 required: Boolean
  for (n<- 1 to 6){
        ^